--- a/global.css
+++ b/global.css
@@ -4,7 +4,7 @@
  * 全局
  *
  * @project: cfw
- * @author: 吴烈
+ * @author: wu
  * @time: 2011-04-06
  * @orgalization: 腾翔互创
  * @website: http://www.1stcore.com/
@@ -15,7 +15,7 @@
 /*
  * 重置样式
  *
- * 作者：吴烈
+ * 作者：wu
  * 时间：2009-08-12
  * 版本：2.1
  * 说明：稳定版本
